# version 0.61.5
17/12/2018
   - Added search timeout in meta query (margaretha)
18/12/2018
   - Updated RewriteHandler (margaretha)

version 0.61.4
14/11/2018
   - Integrated lite and full services and controllers in core (margaretha)
29/11/2018
   - Added OAuth2 scope for listing user clients (margaretha)
30/11/2018
   - Updated sample-index to Krill v0.58.1 (diewald)
06/12/2018
   - Fixed KoralNode at method (margaretha)
11/12/2018
   - Removed document controllers and KustvaktResource (margaretha) 
   - Fixed rewrite bugs (updated rewriteQuery & KoralNode) (margaretha)   

version 0.61.3
22/10/2018
   - Updated jetty, spring and hibernate versions (margaretha)
13/11/2018
   - Moved secureRandomAlgorithm and messageDigestAlgorithm configuration 
     to full (margaretha)

version 0.61.2
12/09/2018
   - Removed log4j loader and old OAuth2 implementation codes(margaretha)
13/09/2018
   - Updated KoralNode and enforced order of RewriteTask (margaretha)
14/09/2018
   - Added a status code for non-unique results (margaretha)
19/09/2018
   - Updated supported version configuration (margaretha)
22/10/2018
   - Updated spring, jetty and hibernate versions (margaretha)
24/10/2018
   - Moved license regex configuration to full (margaretha)
   - Added defaultRewriteConstraints (margaretha)
29/10/2018
    - Added javax.servlet-api (margaretha)
    - Updated koral version (margaretha)
    
version 0.61.1
28/08/2018
    - Added API URL versioning (margaretha)

30/08/2018
   - Added backwards compability for URL versioning (margaretha)
   - Updated API version filter (margaretha)

version 0.61.0
13/08/2018
	- Updated Krill and Koral versions enabling VC caching and referencing (margaretha)
	- Set kustvakt configuration as Krill properties (margaretha)
	
version 0.60.5
09/07/2018
	- Fixed status codes (margaretha)
	- Added KustvaktException for wrapping another exception (margaretha)
	- Removed deprecated codes regarding KustvaktResource (margaretha)
	
version 0.60.4
25/06/2018